tests/behavior/success/unary_bool_not.bz
function main()
{
	let b = false;
	if (!b != !false) unreachable;

	let b = true;
	if (!b != !true) unreachable;
}
