tests/behavior/error/int_modulo_by_zero_u16.bz
function main()
{
	let a = 1u16;
	let b = 0u16;
	let _ = a % b;
}
